cmake_minimum_required(VERSION 3.14)
project(FEMWave)
set(CMAKE_POLICY_DEFAULT_CMP0069 NEW)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
if(MSVC)
  set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /MT /GR-")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT /GR-")
  set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /MTd /GR-")
  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd /GR-")
endif()

set(BUILD_SHARED_LIBS FALSE)
set(SFML_BUILD_AUDIO FALSE)
set(SFML_BUILD_NETWORK FALSE)
add_subdirectory(../SFML ${CMAKE_CURRENT_BINARY_DIR}/SFML)

set(IMGUI_DIR ../imgui)
set(IMGUI_SFML_FIND_SFML OFF)
add_subdirectory(../imgui-sfml ${CMAKE_CURRENT_BINARY_DIR}/imgui-sfml)

add_executable(FEMWave WIN32 Entry.cpp Wave.cpp Wave.h glad/src/glad.c)
target_include_directories(FEMWave PRIVATE ../eigen-git-mirror glad/include)
target_link_libraries(FEMWave PRIVATE sfml-system sfml-window sfml-graphics sfml-main ImGui-SFML)
